// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@checkup/cli normal cli output if excludePaths are provided by both the config and command line, use command line 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (4 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 988dab0635e80290c915a8729decff96

=== Metrics

Lines Of Code

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 1 lines
■ hbs (1)


"
`;

exports[`@checkup/cli normal cli output if excludePaths are provided by both the config and command line, use command line 2`] = `
"
Checkup report generated for checkup-app v0.0.0 (5 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 988dab0635e80290c915a8729decff96

=== Metrics

Lines Of Code

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 2 lines
■ js (2)


"
`;

exports[`@checkup/cli normal cli output should output checkup result 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (6 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 395b15f7dea0dee193db593e1c6cfb5b

=== Metrics

Lines Of Code

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 3 lines
■ js (2)
■ hbs (1)


"
`;

exports[`@checkup/cli normal cli output should output checkup result in JSON 1`] = `
"{
  \\"info\\": {
    \\"project\\": {
      \\"name\\": \\"checkup-app\\",
      \\"version\\": \\"0.0.0\\",
      \\"repository\\": {
        \\"totalCommits\\": 0,
        \\"totalFiles\\": 0,
        \\"age\\": \\"0 days\\",
        \\"activeDays\\": \\"0 days\\"
      }
    },
    \\"cli\\": {
      \\"configHash\\": \\"395b15f7dea0dee193db593e1c6cfb5b\\",
      \\"config\\": {
        \\"$schema\\": \\"https://raw.githubusercontent.com/checkupjs/checkup/master/packages/core/src/config/config-schema.json\\",
        \\"excludePaths\\": [],
        \\"plugins\\": [],
        \\"tasks\\": {}
      },
      \\"version\\": \\"0.0.0\\",
      \\"schema\\": 1,
      \\"flags\\": {
        \\"format\\": \\"json\\",
        \\"outputFile\\": \\"\\"
      }
    },
    \\"analyzedFilesCount\\": [
      \\"/.checkuprc\\",
      \\"/.eslintrc.js\\",
      \\"/index.hbs\\",
      \\"/index.js\\",
      \\"/package-lock.json\\",
      \\"/package.json\\"
    ]
  },
  \\"results\\": [
    {
      \\"info\\": {
        \\"taskName\\": \\"lines-of-code\\",
        \\"taskDisplayName\\": \\"Lines of Code\\",
        \\"category\\": \\"metrics\\"
      },
      \\"result\\": [
        {
          \\"key\\": \\"lines of code\\",
          \\"type\\": \\"lookup-value\\",
          \\"dataSummary\\": {
            \\"values\\": {
              \\"js\\": 2,
              \\"hbs\\": 1
            },
            \\"dataKey\\": \\"extension\\",
            \\"valueKey\\": \\"lines\\",
            \\"total\\": 3
          },
          \\"data\\": [
            {
              \\"filePath\\": \\"/.eslintrc.js\\",
              \\"extension\\": \\"js\\",
              \\"lines\\": 1
            },
            {
              \\"filePath\\": \\"/index.hbs\\",
              \\"extension\\": \\"hbs\\",
              \\"lines\\": 1
            },
            {
              \\"filePath\\": \\"/index.js\\",
              \\"extension\\": \\"js\\",
              \\"lines\\": 1
            }
          ]
        }
      ]
    }
  ],
  \\"errors\\": [],
  \\"actions\\": []
}"
`;

exports[`@checkup/cli normal cli output should run a single task if the tasks option is specified with a single task 1`] = `
"
Checkup report generated for checkup-app v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 395b15f7dea0dee193db593e1c6cfb5b

=== Metrics

Lines Of Code

 0 lines

=== Fake

File Count Task




"
`;

exports[`@checkup/cli normal cli output should run multiple tasks if the tasks option is specified with multiple tasks 1`] = `
"
Checkup report generated for checkup-app v0.0.0

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 395b15f7dea0dee193db593e1c6cfb5b

=== Metrics

Lines Of Code

 0 lines

=== Fake

File Count Task



=== Foo Task


"
`;

exports[`@checkup/cli normal cli output should run the tasks on the globs passed into checkup, if provided, instead of entire app 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (3 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 395b15f7dea0dee193db593e1c6cfb5b

=== Metrics

Lines Of Code

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 3 lines
■ hbs (2)
■ js (1)

=== Fake

File Count Task




"
`;

exports[`@checkup/cli normal cli output should run the tasks on the globs passed into checkup, if provided, instead of entire app 2`] = `
"
Checkup report generated for checkup-app v0.0.0 (9 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 395b15f7dea0dee193db593e1c6cfb5b

=== Metrics

Lines Of Code

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 6 lines
■ js (4)
■ hbs (2)

=== Fake

File Count Task




"
`;

exports[`@checkup/cli normal cli output should use the config at the config path if provided 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (6 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 395b15f7dea0dee193db593e1c6cfb5b

=== Metrics

Lines Of Code

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 3 lines
■ js (2)
■ hbs (1)


"
`;

exports[`@checkup/cli normal cli output should use the excludePaths provided by the command line 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (3 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 395b15f7dea0dee193db593e1c6cfb5b

=== Metrics

Lines Of Code

 0 lines


"
`;

exports[`@checkup/cli normal cli output should use the excludePaths provided by the command line 2`] = `
"
Checkup report generated for checkup-app v0.0.0 (5 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 395b15f7dea0dee193db593e1c6cfb5b

=== Metrics

Lines Of Code

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 2 lines
■ js (2)


"
`;

exports[`@checkup/cli normal cli output should use the excludePaths provided by the config 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (5 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 988dab0635e80290c915a8729decff96

=== Metrics

Lines Of Code

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 2 lines
■ js (2)


"
`;

exports[`@checkup/cli normal cli output should use the excludePaths provided by the config 2`] = `
"
Checkup report generated for checkup-app v0.0.0 (6 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 395b15f7dea0dee193db593e1c6cfb5b

=== Metrics

Lines Of Code

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 3 lines
■ js (2)
■ hbs (1)


"
`;
